# sharedstreets

./: .coveragerc  .editorconfig  .gitignore  LICENSE  Pipfile  Procfile  README.rst  manage.py  pyproject.toml  q  requirements.txt  scratch.py  scratch2.py  validate_person.py
.envs/.local/: .postgres
.fonts/: Kingthings_Typewriter_2.eot
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
data/: models.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/pycharm/: configuration.rst
gatherings/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
gatherings/migrations/: 0001_initial.py  0002_auto_20190816_0140.py  0002_auto_20200201_0300.py  0002_gathering_name.py  0002_people.py  0003_auto_20190816_0143.py  0003_gathering_description.py  0003_gatherings.py  0004_auto_20190816_0150.py  0004_auto_20190822_0613.py  0004_auto_20200213_0054.py  0004_sessions.py  0005_auto_20190816_0239.py  0005_auto_20190816_0414.py  0005_auto_20190816_0425.py  0005_auto_20190827_0317.py  0006_auto_20190816_0441.py  0006_auto_20190827_0318.py  0007_auto_20190816_0450.py  0007_remove_session_gathering.py  0008_auto_20190827_0330.py  0009_auto_20190827_0330.py  0010_session_location.py  0011_auto_20190827_2241.py  0012_auto_20190827_2309.py  0013_auto_20190827_2311.py  0014_auto_20190827_2318.py  0015_auto_20190827_2323.py  0016_auto_20190827_2325.py  0017_auto_20190827_2330.py  0018_auto_20191114_0521.py  0019_auto_20191114_0946.py  (+5 more)
requirements/: base.txt  local.txt  production.txt
shared_streets/: conftest.py
(+15 files in other folders)
