[tool.poetry]
name = "sharedstreets"
version = "0.1.0"
description = ""
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-recurrence = "^1.10.3"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^4.0.0"}
whitenoise = "^5.1.0"
django = "^3.0.7"
django-environ = "^0.4.5"
django-model-utils = "^4.0.0"
django-allauth = "^0.42.0"
python-dotenv = "^0.13.0"
django_crispy_forms = "^1.9.1"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.9"
psycopg2-binary = "^2.8.5"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
